[tool.poetry]
name = "pdf-text-processor"
version = "0.1.0"
description = "Minimal PDF text extraction and rendering using PyMuPDF"
authors = ["Francis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymupdf = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 