[tool.poetry]
name = "pdf-text-processor"
version = "0.1.0"
description = "Minimal PDF text extraction and rendering using PyMuPDF"
authors = ["Francis"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
